namespace RedMoonRPG
{
    public struct AnimationTags
    {
        public const string walk = "Walk";
        public const string idle = "Idle";
        public const string run = "Run";
        
        
        // Attack animation
        public const string SwordAttack = "SlashBaseAttack";
    }
}